--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "jade": "~1.6.0"
+  },
+  "devDependencies": {
+    "karma-chrome-launcher": "^0.1.5"
   }
 }
