--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "angular-sanitize": "~1.2.0",
     "angular-animate": "~1.2.0",
     "angular-touch": "~1.2.0",
-    "angular-route": "~1.2.0"
+    "angular-route": "~1.2.0",
+    "requirejs": "~2.1.15",
+    "angularAMD": "~0.2.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
